--- a/client/main.html
+++ b/client/main.html
@@ -1,13 +1,8 @@
 <head>
-  <title>meteor</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/knacss/4.4.0/knacss.css">
-    <style>
-        body {
-            background-image: url('bg.jpg');
-        }
-    </style>
+    <title>MeteoReactRedux</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"/>
 </head>
 
 <body>
-    <div id="render-target"></div>
+    <div id="app-container"></div>
 </body>
